[ADD] add character service
