# docs/swagger.yaml
@@ -124,6 +124,29 @@ paths:
       summary: Create a new user
       tags:
       - auth
+  /characters:
+    get:
+      description: Get all characters from the database
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Response'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Get all characters
+      tags:
+      - characters
   /users/{id}:
     delete:
       description: Delete a user by ID
